# ai_news-

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.agents/skills/testing-ai-news-aggregator/: SKILL.md
.github/workflows/: ci.yml  keep-warm.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_article_bulletin.py
backend/: __init__.py  config.py  logging_config.py  main.py  scheduler_state.py
backend/api/: deps.py
backend/api/routes/: admin.py  articles.py  auth.py  categories.py  feed.py  health.py  profile.py
backend/core/: __init__.py  categories.py
backend/database/: __init__.py  base.py  session.py
backend/models/: __init__.py  article.py  niche.py  preference.py  user.py
backend/schemas/: __init__.py  article.py  auth.py  common.py  preference.py  user.py
backend/services/: article_service.py  feed_service.py  security.py  user_service.py
docker/: Dockerfile.backend  Dockerfile.frontend
docs/: CI_CD.md
frontend/: api_client.py  app.py
ingestion/: __init__.py  article_extractor.py  classifier.py  feeds.py  gemini_client.py  ingest.py  llm.py  rss_fetcher.py  summarizer.py
scheduler/: daily_digest.py  email_client.py  scheduler.py
tests/: conftest.py  test_admin.py  test_api_routes.py  test_auth.py  test_classifier.py  test_config.py  test_database.py  test_digest_and_scheduler.py  test_feed.py  test_gemini_client.py  test_ingestion.py  test_llm.py  test_summarizer.py
