[project]
name = "ai-news-aggregator"
version = "1.0.0"
description = "AI-Powered Personalized News Aggregator"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["backend", "ingestion", "scheduler"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "E501"]  # B008: FastAPI Depends() defaults; E501: long strings

[tool.ruff.lint.per-file-ignores]
# conftest deliberately interleaves imports with engine-patching setup.
"tests/conftest.py" = ["E402", "I001"]

[tool.ruff.lint.isort]
known-first-party = ["backend", "ingestion", "scheduler", "frontend"]
